--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,6 @@ sqlalchemy==1.4.46; python_version >= '2.7' and python_version not in '3.0, 3.1,
 werkzeug==2.2.2; python_version >= '3.7'
 wtforms==3.0.1; python_version >= '3.7'
 zipp==3.17.0; python_version >= '3.8'
+setuptools==69.0.2; python_version >= '3.8'
+polygon-api-client==1.13.4
+requests==2.26.0
