--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,8 @@ werkzeug = "==2.2.2"
 wtforms = "==3.0.1"
 importlib-metadata = "==6.9.0"
 zipp = "==3.17.0"
+polygon-api-client = "==1.13.4"
+requests = "==2.26.0"
 
 [dev-packages]
 
